--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "Gulp",
-  "version": "0.0.0",
+  "name": "Plately",
+  "version": "2.0.0",
   "authors": [
     "maxx1128 <maxx1128@gmail.com>"
   ],
@@ -8,12 +8,11 @@
     "node"
   ],
   "license": "MIT",
-  "dependencies": {
-    "Maxwell-bitters": "maxx1128/Maxwell-bitters"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "bourbon": "~4.2.3",
-    "neat": "~1.7.2",
-    "angular": "~1.4.3"
+    "angular": "~1.4.5",
+    "bourbon": "~4.2.4",
+    "jquery": "~2.1.4",
+    "neat": "~1.7.2"
   }
 }
