--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "Plately",
-  "version": "2.0.0",
+  "name": "What Eeveelution Are You Quiz?",
+  "version": "1.0.0",
   "authors": [
     "maxx1128 <maxx1128@gmail.com>"
   ],
